--- a/app/views/requests/index.html.erb
+++ b/app/views/requests/index.html.erb
@@ -25,7 +25,7 @@
     <td><%= request.request_date %></td>
     <td><%= request.user.username %></td>
     <td><%= request.user.committee %></td>
-    <td><%= request.user.last_name %></td>
+    <td><%= request.user.area %></td>
     <td><%= request.para %></td>
     <td><%= request.status %></td>
     <td><%= link_to 'Show', request %></td>
