--- a/app/views/requests/show.html.erb
+++ b/app/views/requests/show.html.erb
@@ -31,8 +31,8 @@
 </p>
 
 <p>
-  <b>Acount number:</b>
-  <%= @request.acount_number %>
+  <b>Account number:</b>
+  <%= @request.account_number %>
 </p>
 
 <p>
