funciona y tiene contactos

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -94,12 +94,12 @@
 				<% if ((session[:user]).nil?)==false %>	
 				<a href="/home/index" class="boton"> Plataforma</a>
 				<% end %>
-				<a href="fundamentosfinan.html" class="boton">Fundamentos Financieros</a>
-				<a href="fundamentosleg.html" class="boton">Fundamentos Legales</a>
+				<a href="/home/fundamentosfinan" class="boton">Fundamentos Financieros</a>
+				<a href="/home/fundamentosleg" class="boton">Fundamentos Legales</a>
 				<% if (session[:user]).nil? %>
 				<a href="/users/login" class="boton">Plataforma - Login</a>
 				<% end %>
-				<a href="contacto.html" class="boton">Contacto</a>
+				<a href="/home/contactos" class="boton">Contacto</a>
 				<% if ((session[:user]).nil?)==false %>					
 				<a href="/users/logout" class="boton">Plataforma - Logout</a>				
 				<% end %>
