con imagenes y cosas de aiesec

--- a/app/views/home/principal.html.erb
+++ b/app/views/home/principal.html.erb
@@ -65,7 +65,7 @@
 			</div>
 			<div class="item">
 				<div class="titulo_item">Tip COMM</div>
-				<div class="foto"><img src="/assets/t2.jpg">
+				<div class="foto"><img src="/assets/t2.png">
 				</div>
 				<div class="articulo">Demostrar que el area no se trata solo de hacer publicidad, involucra marketing...</div>
 			</div>
@@ -77,7 +77,7 @@
 
 				<div class="item">
 					<div class="titulo_item">Returnees</div>
-					<div class="foto"><img src="/assets/n1.jpg">
+					<div class="foto"><img src="/assets/n1.png">
 					</div>
 					<div class="articulo">El viernes celebramos el regreso de nuestros Eps en el Leon. Bienvenidos y esperamos seguir en contacto, son parte de la gran familia AIESECA</div>
 				</div>
