--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -123,9 +123,9 @@
 				
 
 			<div id="footer">
-			<p>For full instructions go to <a href="http://slidesjs.com" target="_blank">http://slidesjs.com</a>.</p>
-			<p>Slider design by Orman Clark at <a href="http://www.premiumpixels.com/" target="_blank">Premium Pixels</a>. You can donwload the source PSD at <a href="http://www.premiumpixels.com/clean-simple-image-slider-psd/" target="_blank">Premium Pixels</a></p>
-			<p>&copy; 2010 <a href="http://nathansearles.com" target="_blank">Nathan Searles</a>. All rights reserved. Slides is licensed under the <a href="http://www.apache.org/licenses/LICENSE-2.0" target="_blank">Apache license</a>.</p>
+			<p>Para loguearse en la plataforma oficial visite <a href="http://myaiesec.net" target="_blank">http://myaiesec.net</a>.</p>
+			<p>Saber un poco de lo nuevo en <a href="http://aiesecusb.blogspot.com/" target="_blank">AIESEC USB</a>. Si desea mas informacion de la organizacion <a href="http://www.aiesec.org/venezuela/" target="_blank">Aiesec en Venezuela</a></p>
+			<p>&copy; Derechos reservados para AIESEC USB. Buscanos en <a href="http://www.youtube.com/watch?v=BW0TDX70K-0" target="_blank">http://youtube.com</a></p>
 			</div>
 
 		</div>
