--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -92,14 +92,14 @@
 				<a href="/home/principal" class="boton">Inicio</a>
 				<% end %>
 				<% if ((session[:user]).nil?)==false %>	
-				<a href="/home/index" class="boton"> Plataforma</a>
+				<a href="/home/index" class="boton"> Inicio</a>
 				<% end %>
 				<a href="/home/fundamentosfinan" class="boton">Fundamentos Financieros</a>
 				<a href="/home/fundamentosleg" class="boton">Fundamentos Legales</a>
+				<a href="/home/contactos" class="boton">Contacto</a>
 				<% if (session[:user]).nil? %>
 				<a href="/users/login" class="boton">Plataforma - Login</a>
 				<% end %>
-				<a href="/home/contactos" class="boton">Contacto</a>
 				<% if ((session[:user]).nil?)==false %>					
 				<a href="/users/logout" class="boton">Plataforma - Logout</a>				
 				<% end %>
