--- a/app/views/eps/index.html.erb
+++ b/app/views/eps/index.html.erb
@@ -10,8 +10,10 @@
 	    <th scope="col">EP Manager Name</th>
             <th scope="col">EP Manager Email</th>
     	    <th scope="col"></th>
+	    <% if session[:user].role=='Admin' %>
     	    <th scope="col"></th>
     	    <th scope="col"></th>
+	    <% end %>
         </tr>
   </thead>
     
@@ -26,8 +28,10 @@
     <td><%= ep.ep_manager_name %></td>
     <td><%= ep.ep_manager_email %></td>
     <td><%= link_to 'Show', ep %></td>
+    <% if session[:user].role=='Admin' %>
     <td><%= link_to 'Edit', edit_ep_path(ep) %></td>
     <td><%= link_to 'Destroy', ep, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+    <% end %>
   </tr>
 <% end %>
 </tbody>
